spring boot enhancements added
Issue-ID: MUSIC-272
Change-Id: I483f2c3e21b324677c3d7bbd2d5375f3fe9aa314
Signed-off-by: srupane kondreddy (srupane) <srupane.kondreddy@att.com>